<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>cn.com.yusys.yusp.common</groupId>
    <artifactId>yusp-commons-dependencies</artifactId>
    <version>V4.0.1</version>
  </parent>
  <groupId>cn.com.yusys.yusp</groupId>
  <artifactId>yusp-plus</artifactId>
  <version>V4.x.x-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>yusp-plus</name>
  <modules>
    <module>yusp-plus-uaa</module>
    <module>yusp-plus-common</module>
    <module>yusp-plus-oca</module>
    <module>yusp-plus-single</module>
    <module>yusp-plus-extend</module>
    <module>yusp-plus-dbinit</module>
    <module>yusp-plus-workboard</module>
    <module>yusp-plus-file</module>
  </modules>
  <distributionManagement>
    <repository>
      <id>uadp_releases</id>
      <url>http://artifactory.mis.bcs:8082/artifactory/uadp-maven-releases-local/</url>
    </repository>
  </distributionManagement>
  <properties>
    <code></code>
    <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
    <maven.compiler.target>17</maven.compiler.target>
    <java.version>17</java.version>
    <maven.compiler.source>17</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.compilerVersion>17</maven.compiler.compilerVersion>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <commons-net.version>3.9.0</commons-net.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.quartz-scheduler</groupId>
        <artifactId>quartz</artifactId>
        <version>2.5.0</version>
        <exclusions>
          <exclusion>
            <groupId>com.mchange</groupId>
            <artifactId>c3p0</artifactId>
          </exclusion>
          <exclusion>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP-java6</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>com.alibaba</groupId>
      <artifactId>fastjson</artifactId>
    </dependency>
    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis</artifactId>
    </dependency>
    <dependency>
      <groupId>gdb_mysql-connector-java</groupId>
      <artifactId>gdb_mysql-connector-java</artifactId>
      <version>5.1.46.69</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.baomidou</groupId>
      <artifactId>mybatis-plus-boot-starter-test</artifactId>
      <version>3.5.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>6.8.7</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.tongweb.springboot</groupId>
      <artifactId>tongweb-spring-boot-starter-3.x</artifactId>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.3</version>
        <configuration>
          <arguments>-DskipTests</arguments>
          <releaseVersion>1.1.4</releaseVersion>
          <scmCommentPrefix>[1.1.4 publish use maven-release-plugin]</scmCommentPrefix>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.1.2</version>
        <configuration>
          <argLine>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <compilerArgs>
            <arg>-parameters</arg>
          </compilerArgs>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
